Added explainatory heading

--- a/Fitting foregrounds with missing modes.ipynb
+++ b/Fitting foregrounds with missing modes.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fitting foregrounds with missing modes\n",
+    "\n",
+    "Would like to fit high lmax foregrounds using a model with a lower lmax = lmod.\n",
+    "This reduces the fidelity of our reconstruction. Let's use missing \n",
+    "modes-modelling assuming that the missing modes are Gaussian with the same power\n",
+    "spectrum as the foregrounds and see if this helps."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
