Added explanatory heading.

--- a/Fitting Gaussian random field with missing modes.ipynb
+++ b/Fitting Gaussian random field with missing modes.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fitting foregrounds with missing modes\n",
+    "\n",
+    "Would like to fit high lmax foregrounds using a model with a lower lmax = lmod.\n",
+    "This reduces the fidelity of our reconstruction. Let's test missing \n",
+    "modes-modelling on a Gaussian random field with the same power spectrum as our\n",
+    "foregrounds."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
