--- a/Fitting Gaussian random field with missing modes.ipynb
+++ b/Fitting Gaussian random field with missing modes.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fitting foregrounds with missing modes\n",
+    "# Fitting Gaussian random field with missing modes\n",
     "\n",
     "Would like to fit high lmax foregrounds using a model with a lower lmax = lmod.\n",
     "This reduces the fidelity of our reconstruction. Let's test missing \n",
@@ -25,6 +25,8 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
+    "\n",
+    "import src.plotting as PL\n",
     "import src.beam_functions as BF\n",
     "import src.spherical_harmonics as SH\n",
     "import src.forward_model as FM\n",
@@ -122,136 +124,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compare_estimate_to_reality(a_reality, a_estimate, ylm_mat=None, nside=None):\n",
-    "    \"\"\"\n",
-    "    Plot various figures comparing the resonstructed map to the original map,\n",
-    "    and the residuals of the estimated alm.\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    a_reality, a_estimate\n",
-    "        alm vectors corresponding to the fiducial map and the estimated map\n",
-    "        respectively. a_reality should be as long or longer than a_estimate.\n",
-    "    ylm_mat\n",
-    "        Ylm matrix corresponding to a_reality. This is chopped down to use for \n",
-    "        a_estimate too. If none is passed, one will be created.\n",
-    "    nside\n",
-    "        If a Ylm matrix is being created, must pass a value for its nside. If \n",
-    "        a Ylm matrix is being passed, the nside argument is ignored.    \n",
-    "    \"\"\"\n",
-    "    try:\n",
-    "        lmax = RS.get_lmax(len(a_reality))\n",
-    "        lmod = RS.get_lmax(len(a_estimate))\n",
-    "        if lmod > lmax:\n",
-    "            msg = 'fiducial alm vector must be as long or longer than the ' \\\n",
-    "                + 'estimated alm vector.'\n",
-    "            raise ValueError(msg)\n",
-    "    except ValueError:\n",
-    "        raise ValueError('invalid alm vector length.')\n",
-    "    \n",
-    "    if ylm_mat is None:\n",
-    "        if nside is None:\n",
-    "            raise ValueError(\"if Ylm matrix isn't passed, nside should be.\")\n",
-    "        ylm_mat = SH.calc_spherical_harmonic_matrix(nside=nside, lmax=lmax)\n",
-    "    \n",
-    "    no_modes = len(a_estimate)\n",
-    "    ylm_mat_mod = ylm_mat[:, :no_modes]\n",
-    "\n",
-    "    hp.mollview(ylm_mat@a_reality, title=f\"lmax={lmax} original map\")\n",
-    "    plt.show()\n",
-    "\n",
-    "    hp.mollview(ylm_mat_mod@a_estimate, title=f\"lmod={lmod} reconstructed map\")\n",
-    "    plt.show()\n",
-    "\n",
-    "    hp.mollview(ylm_mat_mod@a_estimate - ylm_mat@a_reality, \n",
-    "                title=f\"lmax={lmax}, lmod={lmod} reconstructed map residuals\")\n",
-    "    plt.show()\n",
-    "\n",
-    "    mode_residuals = abs(a_estimate[:no_modes] - a_reality[:no_modes])\n",
-    "    mode_residuals /= abs(a_reality[:no_modes])\n",
-    "    lmod_arr = list(range(0, lmod+1, 2))\n",
-    "    lmod_idx = [RS.get_idx(l=l, m=-l) for l in lmod_arr]\n",
-    "    plt.semilogy(range(no_modes), mode_residuals, '.')\n",
-    "    plt.xticks(ticks=lmod_idx, labels=lmod_arr)\n",
-    "    plt.xlabel(\"spherical harmonic l number\")\n",
-    "    plt.ylabel(\"|alm estimated - alm fiducial|/|alm fiducial|\")\n",
-    "    plt.show()\n",
-    "    \n",
-    "\n",
-    "def compare_reconstructions(a_reality, *a_estimates, labels=None, fmts=None, ylm_mat=None):\n",
-    "    \"\"\"\n",
-    "    Compare the errors in reconstructions of the original alm vector by plotting\n",
-    "    the residuals of the vectors and optionally a bar chart of the different temperature\n",
-    "    standard deviations from the fiducial map.\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    a_reality, a_estimates\n",
-    "        Fiducial alm vector and set of estimated alm vectors. Estimated vectors\n",
-    "        must be as long or shorter than the fiducial vector.\n",
-    "    labels\n",
-    "        List of labels for the different estimates.\n",
-    "    fmts\n",
-    "        List of scatter plot format arguments for the estimates.\n",
-    "    ylm_mat\n",
-    "        ylm matrix corresponding to a_reality. If passed, calculates the\n",
-    "        residuals of the reconstructed temperature maps for each of the\n",
-    "        estimates and produces a bar plot.\n",
-    "    \"\"\"\n",
-    "    no_modes = min([len(a) for a in a_estimates])\n",
-    "    lmod = RS.get_lmax(no_modes)\n",
-    "    lmod_arr = list(range(0, lmod+1, 2))\n",
-    "    lmod_idx = [RS.get_idx(l=l, m=-l) for l in lmod_arr]\n",
-    "\n",
-    "    if labels is None:\n",
-    "        labels = ['']*len(a_estimates)\n",
-    "    if fmts is None:\n",
-    "        fmts = ['.']*len(a_estimates)\n",
-    "    \n",
-    "    for a_estimate, label, fmt in zip(a_estimates, labels, fmts):\n",
-    "        mode_residuals = abs(a_estimate[:no_modes] - a_reality[:no_modes])\n",
-    "        mode_residuals /= abs(a_reality[:no_modes])\n",
-    "        plt.semilogy(range(no_modes), mode_residuals, fmt, label=label)\n",
-    "    plt.legend()\n",
-    "    plt.xticks(ticks=lmod_idx, labels=lmod_arr)\n",
-    "    plt.xlabel(\"spherical harmonic l number\")\n",
-    "    plt.ylabel(\"|alm estimated - alm fiducial|/|alm fiducial|\")\n",
-    "    plt.show()\n",
-    "\n",
-    "    # Make a bar chart comparing the reconstruction error in rms temperature.\n",
-    "    if ylm_mat is not None:\n",
-    "        map_reality = ylm_mat @ a_reality\n",
-    "        ylm_mats_trunc = [ylm_mat[:,:len(a)] for a in a_estimates]\n",
-    "        map_estimates = [y_mat @ a for y_mat, a in zip(ylm_mats_trunc, a_estimates)]\n",
-    "        rms = [np.std(map_reality - map_est) for map_est in map_estimates]\n",
-    "        plt.bar(x=list(range(len(rms))), height=rms)\n",
-    "        plt.xticks(ticks=list(range(len(rms))), labels=labels)\n",
-    "        plt.ylabel(\"RMS temperature error [K]\")\n",
-    "        plt.xticks(rotation=30)\n",
-    "        plt.show()\n",
-    "    \n",
-    "    if ylm_mat is not None:\n",
-    "        lmax = RS.get_lmax(len(a_reality))\n",
-    "        idxs = [RS.get_idx(l=l, m=l)+1 for l in range(lmax)]\n",
-    "        cutoff_realities = np.array([ylm_mat[:,:i] @ a_reality[:i] for i in idxs])\n",
-    "        for a, label, fmt in zip(a_estimates, labels, fmts):\n",
-    "            lmax_a = RS.get_lmax(len(a))\n",
-    "            idxs = [RS.get_idx(l=l, m=l)+1 for l in range(lmax_a)]\n",
-    "            cutoff_estimates = np.array([ylm_mat[:,:i] @ a[:i] for i in idxs])\n",
-    "            rms = np.std(cutoff_estimates-cutoff_realities[:len(idxs)], axis=1)\n",
-    "            plt.semilogy(list(range(lmax_a)), rms, fmt, label=label)\n",
-    "        plt.xlabel(\"spherical harmonic l number\")\n",
-    "        plt.ylabel(\"RMS temperature residuals [K]\")\n",
-    "        plt.legend()\n",
-    "        plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -303,7 +175,7 @@
     "a_ml_noisy = mat_W_perfect @ d_noisy\n",
     "\n",
     "# Noise free case.\n",
-    "compare_estimate_to_reality(a_reality=fg_gauss_alm, a_estimate=a_ml_noisefree, ylm_mat=ylm_mat)"
+    "PL.compare_estimate_to_reality(a_reality=fg_gauss_alm, a_estimate=a_ml_noisefree, ylm_mat=ylm_mat)"
    ]
   },
   {
@@ -354,7 +226,7 @@
    ],
    "source": [
     "# Noisy case.\n",
-    "compare_estimate_to_reality(a_reality=fg_gauss_alm, a_estimate=a_ml_noisy, ylm_mat=ylm_mat)"
+    "PL.compare_estimate_to_reality(a_reality=fg_gauss_alm, a_estimate=a_ml_noisy, ylm_mat=ylm_mat)"
    ]
   },
   {
@@ -425,7 +297,7 @@
     "a_ml_lowl_noisy = mat_W_lowl @ d_noisy\n",
     "\n",
     "# Noise free case\n",
-    "compare_estimate_to_reality(a_reality=fg_gauss_alm, a_estimate=a_ml_lowl_noisefree, ylm_mat=ylm_mat)"
+    "PL.compare_estimate_to_reality(a_reality=fg_gauss_alm, a_estimate=a_ml_lowl_noisefree, ylm_mat=ylm_mat)"
    ]
   },
   {
@@ -476,7 +348,7 @@
    ],
    "source": [
     "# Noisy case.\n",
-    "compare_estimate_to_reality(a_reality=fg_gauss_alm, a_estimate=a_ml_lowl_noisy, ylm_mat=ylm_mat)"
+    "PL.compare_estimate_to_reality(a_reality=fg_gauss_alm, a_estimate=a_ml_lowl_noisy, ylm_mat=ylm_mat)"
    ]
   },
   {
@@ -556,7 +428,7 @@
    ],
    "source": [
     "# Noise free case.\n",
-    "compare_estimate_to_reality(a_reality=fg_gauss_alm, a_estimate=a_ml_corrected_noisefree, ylm_mat=ylm_mat)"
+    "PL.compare_estimate_to_reality(a_reality=fg_gauss_alm, a_estimate=a_ml_corrected_noisefree, ylm_mat=ylm_mat)"
    ]
   },
   {
@@ -607,7 +479,7 @@
    ],
    "source": [
     "# Noisy case.\n",
-    "compare_estimate_to_reality(a_reality=fg_gauss_alm, a_estimate=a_ml_corrected_noisy, ylm_mat=ylm_mat)"
+    "PL.compare_estimate_to_reality(a_reality=fg_gauss_alm, a_estimate=a_ml_corrected_noisy, ylm_mat=ylm_mat)"
    ]
   },
   {
