Updated README to include blockmat.py

--- a/Multifrequency Code.ipynb
+++ b/Multifrequency Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,13 +20,14 @@
     "import src.beam_functions as BF\n",
     "import src.powerlaw_regression as PR\n",
     "import src.sky_models as SM\n",
+    "from src.blockmat import BlockMatrix, BlockVector\n",
     "from src.spherical_harmonics import RealSphericalHarmonics\n",
     "RS = RealSphericalHarmonics()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -60,206 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class BlockMatrix:\n",
-    "    def __init__(self, mat, nblock=None):\n",
-    "        \"\"\"\n",
-    "        Representation of a block-diagonal matrix with off-diagonal zeros. The \n",
-    "        blocks need not be square, but must have the same dimension as one\n",
-    "        another.\n",
-    "\n",
-    "        Parameters\n",
-    "        ----------\n",
-    "        mat : 3D or 2D numpy array\n",
-    "            Pass either a block to repeat (2D), in which case must specify the \n",
-    "            number of repeats n, or pass a list of the individual blocks to \n",
-    "            repeat (3D), in which case the 2D blocks must each have the same\n",
-    "            shape.\n",
-    "        nblock : int, optional\n",
-    "            Specifies the number of repeats if a single block is passed. If a \n",
-    "            3D mat is passed, this argument is ignored.\n",
-    "        \"\"\"\n",
-    "        # Check validity of inputs\n",
-    "        input_mat_shape = np.shape(mat)\n",
-    "        mat = np.array(mat)\n",
-    "\n",
-    "        if len(input_mat_shape) == 3:\n",
-    "            self.block_shape = np.shape(mat[0])\n",
-    "            for block in mat:\n",
-    "                if np.shape(block) != self.block_shape:\n",
-    "                    raise ValueError(\"shape of matrix blocks must be consistent.\")\n",
-    "            nblock = input_mat_shape[0]\n",
-    "                \n",
-    "        elif len(input_mat_shape) == 2:\n",
-    "            if nblock is None:\n",
-    "                raise ValueError(\"must specify nblock when inputting a single matrix block.\")\n",
-    "            self.block_shape = input_mat_shape\n",
-    "            mat = np.array([mat for _ in range(nblock)])\n",
-    "        \n",
-    "        else:\n",
-    "            raise ValueError(\"mat must be either 2D or 3D.\")\n",
-    "        \n",
-    "        self.mat_shape = tuple( np.array(self.block_shape) * nblock )\n",
-    "        self.nblock = nblock\n",
-    "        self._matrix = mat\n",
-    "\n",
-    "    def __repr__(self) -> str:\n",
-    "        return f\"{self.block_shape} x {self.nblock} BlockMatrix\"\n",
-    "\n",
-    "    def __matmul__(self, other):\n",
-    "        \"\"\"\n",
-    "        Return a BlockMatrix representation of the product of self and other.\n",
-    "\n",
-    "        Parameters\n",
-    "        ----------\n",
-    "        other : BlockMatrix\n",
-    "            Must have the correct dimensionality for matrix multiplication.\n",
-    "        \"\"\"\n",
-    "        # Check dimensionality is right.\n",
-    "        if self.mat_shape[1] != other.mat_shape[0]:\n",
-    "            raise ValueError(\"incompatible matrix shapes.\")\n",
-    "        \n",
-    "        product = []\n",
-    "        for self_block, other_block in zip(self._matrix, other._matrix):\n",
-    "            product.append(self_block@other_block)\n",
-    "            \n",
-    "        if np.shape(product)[-1] == 1:\n",
-    "            return BlockVector(product)\n",
-    "        return BlockMatrix(product)\n",
-    "    \n",
-    "    def __add__(self, other):\n",
-    "        \"\"\"\n",
-    "        Return a Blockmatrix representation of the sum of self and other.\n",
-    "        \"\"\"\n",
-    "        # Check dimensionality is right.\n",
-    "        if self.mat_shape != other.mat_shape:\n",
-    "            raise ValueError(\"incompatible matrix shapes.\")\n",
-    "        \n",
-    "        sum = []\n",
-    "        for self_block, other_block in zip(self._matrix, other._matrix):\n",
-    "            sum.append(self_block+other_block)\n",
-    "        return BlockMatrix(sum)\n",
-    "\n",
-    "    def __sub__(self, other):\n",
-    "        \"\"\"\n",
-    "        Return a Blockmatrix representation of the difference of self and other.\n",
-    "        \"\"\"\n",
-    "        # Check dimensionality is right.\n",
-    "        if self.mat_shape != other.mat_shape:\n",
-    "            raise ValueError(\"incompatible matrix shapes.\")\n",
-    "        \n",
-    "        difference = []\n",
-    "        for self_block, other_block in zip(self._matrix, other._matrix):\n",
-    "            difference.append(self_block-other_block)\n",
-    "        return BlockMatrix(sum)\n",
-    "    \n",
-    "    @property\n",
-    "    def matrix(self):\n",
-    "        \"\"\"\n",
-    "        Return the full block-diagonal matrix.\n",
-    "        \"\"\"\n",
-    "        full_mat = np.zeros(self.mat_shape)\n",
-    "        for n in range(self.nblock):\n",
-    "            b0 = self.block_shape[0]\n",
-    "            b1 = self.block_shape[1]\n",
-    "            full_mat[n*b0:(n+1)*b0, n*b1:(n+1)*b1] = self._matrix[n]\n",
-    "        return full_mat\n",
-    "\n",
-    "\n",
-    "class BlockVector(BlockMatrix):\n",
-    "    def __init__(self, vec, mode='as-is', nblock=None):\n",
-    "        \"\"\"\n",
-    "        Representation of a block vector. Stores it as a series of [N,1] block\n",
-    "        matrices under-the-hood.\n",
-    "\n",
-    "        Parameters\n",
-    "        ----------\n",
-    "        vec : 1D, 2D or 3D numpy array\n",
-    "            Some representation of the block diagonal vector to construct.\n",
-    "            Either the vector itself (1D), a single block of the vector (1D),\n",
-    "            all blocks of the vector in a list (2D), or the full under-the hood\n",
-    "            representation as a list of column vectors (3D).\n",
-    "        mode : str, optional\n",
-    "            If a 1D vec is passed, 'as-is' specifies the vector as being\n",
-    "            complete, while 'block' specifies it as corresponding to a single\n",
-    "            block of the desired vector. If a 2D vector is passed, mode is\n",
-    "            ignored.\n",
-    "        nblock : int, optional\n",
-    "            If a 1D vec is passed and mode is 'as-is', specifies the number of \n",
-    "            blocks that the vector is composed of. If mode is 'block', specifies\n",
-    "            the number of desired blocks of the full vector. If a 2D vector is \n",
-    "            passed, nblock is ignored.\n",
-    "        \"\"\"\n",
-    "        # Check inputs and separate vector blocks.\n",
-    "        if len(np.shape(vec)) == 1:\n",
-    "            if mode == 'as-is':\n",
-    "                if nblock is None:\n",
-    "                    raise ValueError(\"must specify the number of blocks in the complete vector.\")\n",
-    "                if len(vec) % nblock:\n",
-    "                    raise ValueError(\"nblock must divide length of as-is vector.\")\n",
-    "                self.block_len = int(len(vec) / nblock)\n",
-    "                split_vec = [vec[n*self.block_len:(n+1)*self.block_len] for n in range(nblock)]\n",
-    "                mat = np.array([np.array([vector]).T for vector in split_vec])\n",
-    "            \n",
-    "            elif mode == 'block':\n",
-    "                if nblock is None:\n",
-    "                    raise ValueError(\"must specify the number of times to repeat vector block.\")\n",
-    "                self.block_len = len(vec)\n",
-    "                one_block = np.array([vec]).T\n",
-    "                mat = np.array([one_block]*nblock)\n",
-    "\n",
-    "            else:\n",
-    "                raise ValueError(\"invalid mode specified.\")\n",
-    "        \n",
-    "        elif len(np.shape(vec)) == 2:\n",
-    "            nblock = len(vec)\n",
-    "            self.block_len = len(vec[0])\n",
-    "            for v in vec:\n",
-    "                if len(v) != self.block_len:\n",
-    "                    raise ValueError(\"length of vector blocks must be consistent.\")\n",
-    "            mat = np.array([np.array([v]).T for v in vec])\n",
-    "        \n",
-    "        elif len(np.shape(vec)) == 3:\n",
-    "            if np.shape(vec)[-1] != 1:\n",
-    "                raise ValueError(\"expecting a list of column vectors. Are you inputting a list of matrices?\")\n",
-    "            nblock = len(vec)\n",
-    "            self.block_len = len(vec[0])\n",
-    "            for v in vec:\n",
-    "                if len(v) != self.block_len:\n",
-    "                    raise ValueError(\"shape of vector blocks must be consistent.\")\n",
-    "            mat = np.array(vec)\n",
-    "        \n",
-    "        else:\n",
-    "            raise ValueError(\"invalid vec shape.\")\n",
-    "\n",
-    "        self.nblock = nblock\n",
-    "        super().__init__(mat, nblock)\n",
-    "\n",
-    "    def __repr__(self):\n",
-    "        return f\"({(self.block_len)},) x {self.nblock} BlockVector\"\n",
-    "\n",
-    "    @property\n",
-    "    def vector(self):\n",
-    "        \"\"\"\n",
-    "        Return the full block vector.\n",
-    "        \"\"\"\n",
-    "        return self._matrix.flatten()\n",
-    "    \n",
-    "    @property\n",
-    "    def vector_blocks(self):\n",
-    "        \"\"\"\n",
-    "        Return a list of vector blocks.\n",
-    "        \"\"\"\n",
-    "        return np.split(self.vector, self.nblock)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +81,7 @@
        "       [0., 0., 0., 0., 0., 0., 1., 2., 3.]])"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,12 +93,12 @@
     "m1 = BlockMatrix(mat=m1, nblock=3)\n",
     "m2 = BlockMatrix(mat=m2, nblock=3)\n",
     "m3 = m1@m2\n",
-    "m3.get_matrix()"
+    "m3.matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
