--- a/Foreground-only maximum likelihood mapmaking with unmodelled modes.ipynb
+++ b/Foreground-only maximum likelihood mapmaking with unmodelled modes.ipynb
@@ -744,7 +744,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv_mat",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -762,5 +762,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
