--- a/Investigating multifrequency modelling 2.ipynb
+++ b/Investigating multifrequency modelling 2.ipynb
@@ -1104,7 +1104,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv_mat",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1122,5 +1122,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
