--- a/Anstey FG Regions Model.ipynb
+++ b/Anstey FG Regions Model.ipynb
@@ -544,7 +544,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv_mat",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -562,5 +562,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
