--- a/Fitting foregrounds with missing modes.ipynb
+++ b/Fitting foregrounds with missing modes.ipynb
@@ -667,7 +667,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv_mat",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -685,5 +685,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
