--- a/Multifrequency Code.ipynb
+++ b/Multifrequency Code.ipynb
@@ -712,7 +712,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv_mat",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -730,5 +730,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
