--- a/Investigating multifrequency modelling.ipynb
+++ b/Investigating multifrequency modelling.ipynb
@@ -1427,7 +1427,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv_mat",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1445,5 +1445,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
