--- a/Alm Polynomial Inference Complex.ipynb
+++ b/Alm Polynomial Inference Complex.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ec848b33-8c9d-4be5-8dd3-26776e7e545e",
    "metadata": {},
    "outputs": [],
@@ -65,6 +65,114 @@
     "    theta_fg = theta[:-3]\n",
     "    theta_21 = theta[-3:]\n",
     "    return fg_polymod(nuarr, *theta_fg) + cm21_mod(nuarr, *theta_21)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a711cea8-5cdb-418a-bb12-a275501eed66",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "successfully loaded spherical_harmonic_matrix npix, nalm : 12288 561\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/yordani/Documents/boosted_compass/matrix-observer/src/spherical_harmonics.py:133: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  almr[idxr_p] = almc[idxc]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate the data.\n",
+    "nside = 32\n",
+    "lmod  = 1\n",
+    "lmax  = 32\n",
+    "chrom = 1.6e-2\n",
+    "times = np.linspace(0, 24, 12, endpoint=False)\n",
+    "noise = 0.01\n",
+    "lats  = np.array([-26*3, -26*2, -26, 0, 26, 26*2, 26*3])#[-26, 26]\n",
+    "Nlmax   = RS.get_size(lmax)\n",
+    "Nlmod   = RS.get_size(lmod)\n",
+    "cm21_mon_pars = [-0.2, 80.0, 5.0]\n",
+    "basemap_err = 5\n",
+    "delta = SM.basemap_err_to_delta(percent_err=basemap_err)\n",
+    "\n",
+    "# Generate foreground and 21-cm signal alm\n",
+    "fg_alm   = SM.foreground_gsma_alm_nsidelo(nu=nuarr, lmax=lmax, nside=nside, use_mat_Y=True, delta=SM.basemap_err_to_delta(basemap_err), err_type='idx', seed=100, meancorr=False)\n",
+    "cm21_alm = SM.cm21_gauss_mon_alm(nu=nuarr, lmax=lmax, params=cm21_mon_pars)\n",
+    "fid_alm  = fg_alm + cm21_alm\n",
+    "\n",
+    "# Generate observation matrix for the modelling and for the observations.\n",
+    "if chrom is not None:\n",
+    "    if not isinstance(chrom, bool):\n",
+    "        chromfunc = partial(BF.fwhm_func_tauscher, c=chrom)\n",
+    "    else:\n",
+    "        chromfunc = BF.fwhm_func_tauscher\n",
+    "    mat_A = FM.calc_observation_matrix_multi_zenith_driftscan_chromatic(nuarr, nside, lmax, lats=lats, times=times, return_mat=False, beam_use=BF.beam_cos_FWHM, chromaticity=chromfunc, Ntau=1)\n",
+    "elif chrom is None:\n",
+    "    narrow_cosbeam  = lambda x: BF.beam_cos(x, 0.8)\n",
+    "    mat_A = FM.calc_observation_matrix_multi_zenith_driftscan(nside, lmax, lats=lats, times=times, beam_use=narrow_cosbeam, return_mat=False, Ntau=1)\n",
+    "    mat_A = BlockMatrix(mat=mat_A, mode='block', nblock=len(nuarr))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "358db433-8fc1-49da-b55d-702f6d447ec8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 1089) x 51 BlockMatrix"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat_A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "4a425c33-0fa9-48c6-9be9-76c93f7a9668",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.00915087 0.33005036 0.1092477  0.35383269 0.78637943 0.15152325\n",
+      " 0.50911333]\n",
+      "Test passed: Both models return the same output to machine accuracy.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def test_models():\n",
+    "    original_model = FM.generate_binwise_cm21_forward_model(nuarr, mat_A, Npoly)\n",
+    "    optimized_model = FM.genopt_binwise_cm21_forward_model(nuarr, mat_A, Npoly)\n",
+    "\n",
+    "    theta = np.random.rand(Npoly * mat_A.block_shape[0] + 3)\n",
+    "    original_output = original_model(theta)\n",
+    "    optimized_output = optimized_model(theta)\n",
+    "\n",
+    "    # Check if the outputs are the same to machine accuracy\n",
+    "    assert np.allclose(original_output, optimized_output, atol=1e-10), \"Outputs are not the same to machine accuracy\"\n",
+    "\n",
+    "    print(\"Test passed: Both models return the same output to machine accuracy.\")\n",
+    "test_models()"
    ]
   },
   {
