--- a/Investigating multifrequency modelling 2.ipynb
+++ b/Investigating multifrequency modelling 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,9 +18,89 @@
     "\n",
     "import src.powerlaw_regression as PR\n",
     "import src.sky_models as SM\n",
+    "from src.sky_models import T_CMB\n",
     "from src.spherical_harmonics import RealSphericalHarmonics\n",
     "RS = RealSphericalHarmonics()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numba import jit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test passed: Both functions return the same output to machine accuracy for all random inputs.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fg_polymod(nuarr, *theta_fg):\n",
+    "    Afg, alpha = theta_fg[:2]\n",
+    "    zetas      = theta_fg[2:]\n",
+    "    exponent = [zetas[i]*np.log(nuarr/60)**(i+2) for i in range(len(zetas))]\n",
+    "    fg_a00_terms = (Afg*1e3)*(nuarr/60)**(-alpha) * np.exp(np.sum(exponent, 0))\n",
+    "    return fg_a00_terms + np.sqrt(4*np.pi)*T_CMB\n",
+    "\n",
+    "def fg_polymod_opt(nuarr, *theta_fg):\n",
+    "    Afg = theta_fg[0]\n",
+    "    alpha = theta_fg[1]\n",
+    "    zetas = theta_fg[2:]\n",
+    "    exponent = np.zeros((len(zetas), len(nuarr)))\n",
+    "    for i in range(len(zetas)):\n",
+    "        for j in range(len(nuarr)):\n",
+    "            exponent[i, j] = zetas[i] * np.log(nuarr[j] / 60) ** (i + 2)\n",
+    "    fg_a00_terms = (Afg * 1e3) * (nuarr / 60) ** (-alpha) * np.exp(np.sum(exponent, axis=0))\n",
+    "    return fg_a00_terms + np.sqrt(4 * np.pi) * T_CMB\n",
+    "\n",
+    "def cm21_mod(nuarr, *theta_21):\n",
+    "    A21, nu0, dnu = theta_21\n",
+    "    cm21_a00_terms = np.sqrt(4*np.pi) * A21 * np.exp(-.5*((nuarr-nu0)/dnu)**2)\n",
+    "    return cm21_a00_terms\n",
+    "\n",
+    "@jit\n",
+    "def fg_cm21_polymod(nuarr, *theta):\n",
+    "    theta_fg = theta[:-3]\n",
+    "    theta_21 = theta[-3:]\n",
+    "    return fg_polymod_opt(nuarr, *theta_fg) + cm21_mod(nuarr, *theta_21)\n",
+    "\n",
+    "def test_fg_polymod_functions():\n",
+    "    nuarr = np.array([50, 60, 70, 80, 90, 100])\n",
+    "    num_tests = 10\n",
+    "    num_zetas = 2  # Example number of zetas\n",
+    "\n",
+    "    for _ in range(num_tests):\n",
+    "        theta_fg = np.random.rand(2 + num_zetas)  # Randomize theta parameters\n",
+    "\n",
+    "        output1 = fg_polymod(nuarr, *theta_fg)\n",
+    "        output2 = fg_polymod_opt(nuarr, *theta_fg)\n",
+    "\n",
+    "        # Check if the outputs are the same to machine accuracy\n",
+    "        assert np.allclose(output1, output2, atol=1e-10), \"Outputs are not the same to machine accuracy\"\n",
+    "\n",
+    "    print(\"Test passed: Both functions return the same output to machine accuracy for all random inputs.\")\n",
+    "\n",
+    "# Run the test\n",
+    "test_fg_polymod_functions()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
