--- a/PCA Reconstruction Metric.ipynb
+++ b/PCA Reconstruction Metric.ipynb
@@ -393,7 +393,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv_mat",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -411,5 +411,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
